finish login and sign up with credentials

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 DATABASE_URL="mysql://root:@localhost:3306/surveillance"
 AUTH_SECRET="8FsALOrqeF0xJ88qReMk5XlFIjyFgSKiWw+hEV4yn8I="
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+GOOGLE_CLIENT_ID=227056159501-hnf0qvp8kgph82gehpon7mpbo2df77t6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
