add mail verification

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 GOOGLE_CLIENT_ID=227056159501-hnf0qvp8kgph82gehpon7mpbo2df77t6.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+RESEND_API_KEY=re_AjdqJ6ja_NfzM6Hea2VXNKXTnFNGtigG8
