--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.11.7",
     "@types/bcryptjs": "^2.4.6",
+    "@uploadthing/react": "^6.2.2",
     "axios": "^1.6.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -49,7 +50,9 @@
     "resend": "^3.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.3.3",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
