--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "lucide-react": "^0.338.0",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
