--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-# DATABASE_URL="mysql://root:@localhost:3306/surveillance"
-DATABASE_URL="postgresql://MohammedSadok:gKpA5zL0iMJj@ep-snowy-bonus-a5ttuv4d-pooler.us-east-2.aws.neon.tech/surveillance?sslmode=require"
+DATABASE_URL="mysql://root:@localhost:3306/surveillance"
 AUTH_SECRET="8FsALOrqeF0xJ88qReMk5XlFIjyFgSKiWw+hEV4yn8I="
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
