--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "docxtemplater": "^3.46.2",
+    "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.338.0",
     "next": "14.1.0",
@@ -63,6 +66,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
